Sample/YHC/YHC.Portal/Views/Error/_Layout.cshtml
<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="renderer" content="webkit" />
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
    <meta name="keywords" content="错误403很抱歉！您指定的网页禁止访问...." />
    <title>错误403很抱歉！您指定的网页禁止访问....</title>
    <link href="/Content/style/error.css" rel="stylesheet" type="text/css" />
</head>
<body>
    @RenderBody()
</body>
</html>